website/websites/u32q/code/knucleotide.4.scala.log

Sat, 12 Jan 2013 18:22:22 GMT

MAKE:
mv knucleotide.scala-4.scala knucleotide.scala
/usr/local/src/scala-2.10.0/bin/scalac -optimise knucleotide.scala
knucleotide.scala:110: error: wrong number of type arguments for scala.collection.mutable.HashTable, should be 2
class HashBag extends HashTable[String] {
                      ^
knucleotide.scala:120: error: not found: value entries
  def elements = entries
                 ^
knucleotide.scala:123: error: not found: value table
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                 ^
knucleotide.scala:125: error: not found: value elemEquals
      if (elemEquals(entryKey(bucket),key)) return bucket
          ^
knucleotide.scala:129: error: not found: value addEntry
    addEntry(bucket)
    ^
5 errors found
make: [knucleotide.scala-4.scala_run] Error 1 (ignored)
3.24s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx3G /usr/local/src/jdk1.7.0_10/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.0/lib/scala-library.jar knucleotide 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class knucleotide
